Grid sizing on explore2.html and autocomplete spacing issue resolved

--- a/full-js/styles/explore2.css
+++ b/full-js/styles/explore2.css
@@ -1,40 +1,43 @@
+.grid-sizer, .grid-item {
+    width: calc(25% - 20px);
+}
+
 @media (min-width: 3440px) {
     .grid-sizer, .grid-item {
-        width: calc(12% - 20px);
+        width: calc(7% - 20px);
     }
 }
 
 @media (min-width: 2560px) and (max-width: 3440px) {
     .grid-sizer, .grid-item {
-        width: calc(16% - 20px);
+        width: calc(10% - 20px);
     }
 }
 
 @media (min-width: 1920px) and (max-width: 2560px) {
     .grid-sizer, .grid-item {
+        width: calc(14% - 20px);
+    }
+}
+
+@media (min-width: 1400px) and (max-width: 1920px) {
+    .grid-sizer, .grid-item {
         width: calc(20% - 20px);
     }
-}
-
-@media screen and (max-width: 1110px) {
-    .grid-sizer, .grid-item {
-        width: calc(33% - 20px);
-    }
-}
-
-.grid-sizer, .grid-item {
-    width: calc(20% - 20px);
 }
 
 @media screen and (max-width: 991px) {
     #exploreAltFooter {
         position: fixed!important;
     }
+    .grid-sizer, .grid-item {
+        width: calc(25% - 20px);
+    }
 }
 
 @media screen and (max-width: 800px) {
     .grid-sizer, .grid-item {
-        width: calc(50% - 20px);
+        width: calc(33% - 20px);
     }
 }
 
